solved right align

--- a/mystyle.css
+++ b/mystyle.css
@@ -1,3 +1,8 @@
+.material-icons.md-18 { 
+  font-size: 20px;
+    margin: auto;
+    padding: initial;
+ }
 .messageContainer {
   padding: 10px;
   font-family: 'Nunito', sans-serif;
@@ -8,7 +13,13 @@
   overflow: scroll;
 }
 button#send {
-	margin-left: 1em;
+  width: 40px;
+  margin: 0;
+  height: 38px;
+  margin-left: 1em;
+  padding: 0;
+  border-radius: 50%;
+  text-align: center;
 }
 .msg {
 	display:flex;
@@ -21,6 +32,8 @@ button#send {
 }
 .group {
   display: flex;
+  width: fit-content;
+  margin: 0px 0px 0px auto;
 }
 .text.me {
   background-color: #bee6ba;
@@ -70,8 +83,8 @@ button#send {
 
 /* Change the color of links on hover */
 .header a:hover {
-  background-color: #ddd;
-  color: black;
+  background-color: #606c76;
+  color: white;
 }
 
 /* Add a color to the active/current link */
